 * #768: Fix a traceback when an invalid command-line flag or action is used.
 * #771: Fix normalization of deprecated sections ("location:", "storage:", "hooks:", etc.) to
   support empty sections without erroring.
 * #774: Disallow the "--dry-run" flag with the "borg" action, as borgmatic can't guarantee the Borg
   command won't have side effects.

1.8.3
 * #665: BREAKING: Simplify logging logic as follows: Syslog verbosity is now disabled by
   default, but setting the "--syslog-verbosity" flag enables it regardless of whether you're at an
   interactive console. Additionally, "--log-file-verbosity" and "--monitoring-verbosity" now
   default to 1 (info about steps borgmatic is taking) instead of 0. And both syslog logging and
   file logging can be enabled simultaneously.
 * #743: Add a monitoring hook for sending backup status and logs to Grafana Loki. See the
   documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#loki-hook
 * #753: When "archive_name_format" is not set, filter archives using the default archive name
   format.
 * #754: Fix error handling to log command output as one record per line instead of truncating
   too-long output and swallowing the end of some Borg error messages.
 * #757: Update documentation so "sudo borgmatic" works for pipx borgmatic installations.
 * #761: Fix for borgmatic not stopping Borg immediately when the user presses ctrl-C.
 * Update documentation to recommend installing/upgrading borgmatic with pipx instead of pip. See the
   documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/set-up-backups/#installation
   https://torsion.org/borgmatic/docs/how-to/upgrade/#upgrading-borgmatic

1.8.2
 * #345: Add "key export" action to export a copy of the repository key for safekeeping in case
   the original goes missing or gets damaged.
 * #727: Add a MariaDB database hook that uses native MariaDB commands instead of the deprecated