@@ -9,6 +9,8 @@
    support empty sections without erroring.
  * #774: Disallow the "--dry-run" flag with the "borg" action, as borgmatic can't guarantee the Borg
    command won't have side effects.
+ * #779: Add a "--match-archives" flag to the "check" action for selecting the archives to check,
+   overriding the existing "archive_name_format" and "match_archives" options in configuration.
 
 1.8.3
  * #665: BREAKING: Simplify logging logic as follows: Syslog verbosity is now disabled by
